--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-exec": "~0.4.6",
+    "grunt-shell": "^1.1.1",
     "grunt-simple-mocha": "~0.4.0",
     "istanbul": "~0.3.5",
     "load-grunt-tasks": "~2.0.0",
